--- a/sass/layout/_body.scss
+++ b/sass/layout/_body.scss
@@ -1,26 +1,25 @@
 .loading-spinner {
   position: fixed;
-  background: rgba(255, 255, 255, 0.95);
+  background-color:#f6f6f6 ;
   height: 100%;
   width: 100%;
-  z-index: 1000;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  z-index: 1;
+  justify-content: center;
+  text-align: center;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  margin-top: -5rem;
+  
   -webkit-animation: loader 4s forwards;
           animation: loader 4s forwards;
 }
 
 .loading-spinner::before {
   content: "";
-  height: 330px;
-  width: 330px;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  height: 300px;
+  width: 300px;
   border-top: 15px solid $color-primary ;
   border-right:15px solid $color-secondary;
   border-bottom: 15px solid $color-tertiary;
@@ -186,13 +185,13 @@
     font-size: 1.6em;
   }
   .heart-empty:hover {
-    animation: vide 0.20s forwards linear;
+    animation: vide 0.30s forwards linear;
     cursor: pointer;
   }
   .heart-empty:hover + i {
     opacity: 1;
     transform: scale(1);
-    transition: transform 0.20s linear;
+    transition: transform 0.30s linear;
   }
   .heart-full {
     position: absolute;
@@ -335,12 +334,6 @@
     justify-content: space-between;
    
   }
-  .choice-1,
-  .choice-2,
-  .choice-3,
-  .choice-4 {
-    animation: transition 1500ms both;
-  }
   .menu .choice-1 .price-check,
   .menu .choice-2 .price-check,
   .menu .choice-3 .price-check,
@@ -348,6 +341,7 @@
     display: flex;
     align-self: center;
     transform: translateX(60px);
+    
   }
   .menu .choice-1:hover .price-check,
   .menu .choice-2:hover .price-check,
@@ -390,6 +384,15 @@
     -webkit-animation: checkslide 0.45s ease-in-out forwards;
     animation: checkslide 0.45s ease-in-out forwards;
   }
+  .choice-1,
+  .choice-2,
+  .choice-3,
+  .choice-4 {
+    animation: transition 1000ms both;
+  }
+
+  
+  
   .menu .menu-content {
     margin-left: 10px;
     white-space: nowrap;
