--- a/sass/utils/_animations.scss
+++ b/sass/utils/_animations.scss
@@ -7,6 +7,15 @@
     visibility: hidden;
   }
 }
+@keyframes loader {
+  0% {
+    visibility: visible;
+  }
+  100% {
+    visibility: hidden;
+  }
+}
+
 
 
 
@@ -40,6 +49,7 @@
     transform: translateY(0px);
   }
 }
+
   
 @keyframes checkslide {
       0% {
