modif apparition box menu

--- a/sass/layout/_body.scss
+++ b/sass/layout/_body.scss
@@ -8,9 +8,9 @@
   text-align: center;
   display: flex;
   margin-top: -5rem;
-  
-  -webkit-animation: loader 4s forwards;
-          animation: loader 4s forwards;
+  animation-delay: 3s;
+  -webkit-animation: loader 3s forwards;
+          animation: loader 3s forwards;
 }
 
 .loading-spinner::before {
@@ -25,9 +25,10 @@
   border-bottom: 15px solid $color-tertiary;
   border-left: 15px solid $color-shadow;
   border-radius: 100%;
-  -webkit-animation: loader_roll 4s linear;
-          animation: loader_roll 4s linear;
+  -webkit-animation: loader_roll 3s linear infinite;
+          animation: loader_roll 3s linear infinite;
 }
+
 
 
 #search {
@@ -384,15 +385,29 @@
     -webkit-animation: checkslide 0.45s ease-in-out forwards;
     animation: checkslide 0.45s ease-in-out forwards;
   }
-  .choice-1,
-  .choice-2,
-  .choice-3,
-  .choice-4 {
-    animation: transition 1000ms both;
+ 
+  .choice-1 {
+    transform: scale(0);
+    -webkit-animation: transition 0.2s  0.2s forwards;
+    animation: transition 0.2s both  0.2s forwards;
   }
-
   
+  .choice-2{
+    transform: scale(0);
+    -webkit-animation: transition 0.4s  0.4s forwards;
+    animation: transition 0.4s both 0.4s forwards;
+  }
   
+  .choice-3 {
+    transform: scale(0);
+    -webkit-animation: transition 0.6s  0.6s forwards;
+    animation: transition 0.6s both  0.6s forwards;
+  }
+  .choice-4 {
+    transform: scale(0);
+    -webkit-animation: transition 0.8s  0.8s forwards;
+    animation: transition 0.8s both  0.8s forwards;
+  }
   .menu .menu-content {
     margin-left: 10px;
     white-space: nowrap;
