--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@ header .logo-home {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 1.6em;
+  font-size: 3.6rem;
   margin: auto;
   padding-top: 10px;
   font-family: "Shrikhand", cursive;
@@ -159,7 +159,7 @@ header .arrow {
   font-size: 1.2em;
   font-weight: normal;
   text-transform: initial;
-  font-family: "roboto-light", 100;
+  font-family: "roboto", 100;
 }
 
 .search-button {
@@ -560,7 +560,7 @@ footer {
   background-color: #353535;
   margin-top: 50px;
 }
-footer h2 {
+footer h4 {
   color: #ffffff;
   font-family: "Shrikhand", cursive;
   font-size: 1.3rem;
