--- a/sass/layout/_header .scss
+++ b/sass/layout/_header .scss
@@ -8,7 +8,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 1.6em;
+    font-size: 3.6rem;
     margin: auto;
     padding-top: 10px;
     font-family: "Shrikhand", cursive;
