--- a/sass/layout/_body.scss
+++ b/sass/layout/_body.scss
@@ -69,7 +69,7 @@
     font-size: 1.2em;
     font-weight:normal ;
     text-transform: initial;
-    font-family: "roboto",100 ;
+    font-family: "roboto" ;
     
 
   }
@@ -300,7 +300,7 @@
     font-weight: normal;
     margin: 30px 20px;
     position: relative;
-    font-family: "roboto",sans-serif ,100;
+    font-family: "roboto",sans-serif ;
   } 
   .menu-title::before {
     content: "";
@@ -330,7 +330,28 @@
     box-shadow: 3px 3px 10px #bfbfbf;
     display: flex;
     justify-content: space-between;
-   
+   }
+   .choice-1 {
+    transform: scale(0);
+    -webkit-animation: transition 0.2s ease-in  0.2s forwards;
+    animation: transition 0.2s both  0.2s forwards;
+  }
+  
+  .choice-2{
+    transform: scale(0);
+    -webkit-animation: transition 0.4s ease-in  0.4s forwards;
+    animation: transition 0.4s both 0.4s forwards;
+  }
+  
+  .choice-3 {
+    transform: scale(0);
+    -webkit-animation: transition  0.6s ease-in 0.6s forwards;
+    animation: transition 0.6s both  0.6s forwards;
+  }
+  .choice-4 {
+    transform: scale(0);
+    -webkit-animation: transition 0.8s ease-in 0.8s forwards;
+    animation: transition 0.8s both  0.8s forwards;
   }
   .menu .choice-1 .price-check,
   .menu .choice-2 .price-check,
@@ -383,28 +404,7 @@
     animation: checkslide 0.45s ease-in-out forwards;
   }
  
-  .choice-1 {
-    transform: scale(0);
-    -webkit-animation: transition 0.2s  0.2s forwards;
-    animation: transition 0.2s both  0.2s forwards;
-  }
   
-  .choice-2{
-    transform: scale(0);
-    -webkit-animation: transition 0.4s  0.4s forwards;
-    animation: transition 0.4s both 0.4s forwards;
-  }
-  
-  .choice-3 {
-    transform: scale(0);
-    -webkit-animation: transition 0.6s  0.6s forwards;
-    animation: transition 0.6s both  0.6s forwards;
-  }
-  .choice-4 {
-    transform: scale(0);
-    -webkit-animation: transition 0.8s  0.8s forwards;
-    animation: transition 0.8s both  0.8s forwards;
-  }
   .menu .menu-content {
     margin-left: 10px;
     white-space: nowrap;
