--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@ header .logo-home {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 3.6rem;
+  font-size: 3rem;
   margin: auto;
   padding-top: 10px;
   font-family: "Shrikhand", cursive;
@@ -159,7 +159,7 @@ header .arrow {
   font-size: 1.2em;
   font-weight: normal;
   text-transform: initial;
-  font-family: "roboto", 100;
+  font-family: "roboto";
 }
 
 .search-button {
@@ -393,7 +393,7 @@ a {
   font-weight: normal;
   margin: 30px 20px;
   position: relative;
-  font-family: "roboto", sans-serif, 100;
+  font-family: "roboto", sans-serif;
 }
 
 .menu-title::before {
@@ -426,6 +426,30 @@ a {
   box-shadow: 3px 3px 10px #bfbfbf;
   display: flex;
   justify-content: space-between;
+}
+
+.choice-1 {
+  transform: scale(0);
+  -webkit-animation: transition 0.2s ease-in 0.2s forwards;
+  animation: transition 0.2s both 0.2s forwards;
+}
+
+.choice-2 {
+  transform: scale(0);
+  -webkit-animation: transition 0.4s ease-in 0.4s forwards;
+  animation: transition 0.4s both 0.4s forwards;
+}
+
+.choice-3 {
+  transform: scale(0);
+  -webkit-animation: transition 0.6s ease-in 0.6s forwards;
+  animation: transition 0.6s both 0.6s forwards;
+}
+
+.choice-4 {
+  transform: scale(0);
+  -webkit-animation: transition 0.8s ease-in 0.8s forwards;
+  animation: transition 0.8s both 0.8s forwards;
 }
 
 .menu .choice-1 .price-check,
@@ -481,30 +505,6 @@ a {
 .menu .choice-4:hover .checkbox {
   -webkit-animation: checkslide 0.45s ease-in-out forwards;
   animation: checkslide 0.45s ease-in-out forwards;
-}
-
-.choice-1 {
-  transform: scale(0);
-  -webkit-animation: transition 0.2s 0.2s forwards;
-  animation: transition 0.2s both 0.2s forwards;
-}
-
-.choice-2 {
-  transform: scale(0);
-  -webkit-animation: transition 0.4s 0.4s forwards;
-  animation: transition 0.4s both 0.4s forwards;
-}
-
-.choice-3 {
-  transform: scale(0);
-  -webkit-animation: transition 0.6s 0.6s forwards;
-  animation: transition 0.6s both 0.6s forwards;
-}
-
-.choice-4 {
-  transform: scale(0);
-  -webkit-animation: transition 0.8s 0.8s forwards;
-  animation: transition 0.8s both 0.8s forwards;
 }
 
 .menu .menu-content {
@@ -629,7 +629,7 @@ footer ul li .fas {
 }
 @media screen and (min-width: 1024px) {
   header .logo-home {
-    width: 30%;
+    font-size: 4rem;
   }
 
   .searchfield {
