--- a/sass/layout/_body.scss
+++ b/sass/layout/_body.scss
@@ -20,13 +20,14 @@
   text-align: center;
   height: 300px;
   width: 300px;
+  margin-top: 3rem;
   border-top: 15px solid $color-primary ;
   border-right:15px solid $color-secondary;
   border-bottom: 15px solid $color-tertiary;
   border-left: 15px solid $color-shadow;
   border-radius: 100%;
-  -webkit-animation: loader_roll 3s linear infinite;
-          animation: loader_roll 3s linear infinite;
+  -webkit-animation: loader_roll 3s forwards;
+          animation: loader_roll 3s forwards;
 }
 
 
@@ -183,27 +184,29 @@
     font-size: 1.6em;
   }
   .heart-empty:hover {
-    animation: vide 0.30s forwards linear;
+    animation:  0.25s  linear;
     cursor: pointer;
   }
   .heart-empty:hover + i {
     opacity: 1;
     transform: scale(1);
-    transition: transform 0.30s linear;
+    transition:  0.25s linear;
   }
   .heart-full {
     position: absolute;
-    opacity: 0;
+    opacity: 1;
     background:linear-gradient(to top, #FF79DA, #9356DC);
     -webkit-background-clip: text;
     color: transparent;
     transform-origin: padding;
     transform: scale(0);
   }
+ 
+
   .restaurants .box-restaurant {
     position: relative;
     width: 90%;
-    height: 62vw;
+    height: 63vw;
     margin: auto;
     margin-top: 25px;
     border-radius: 15px;
@@ -253,16 +256,10 @@
       border-top-right-radius: 40px;
       position: relative;
       top: -35px;
-    }
-      
-    
-    
-  .restaurant-name .heart {
+    } .restaurant-name .heart {
       position: relative;
     }
-    
-  
-  .restaurant-name .heart-empty {
+    .restaurant-name .heart-empty {
     color: #777777;
     position: absolute;
     bottom: 7px;
@@ -279,7 +276,7 @@
   .restaurant-name .heart-full {
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
-    background-image: linear-gradient( 177deg, #FF79DA, #9356DC);
+    background-image: linear-gradient( to top, #FF79DA, #9356DC);
     font-size: 1.6rem;
     display: block;
     position: absolute;
@@ -287,6 +284,10 @@
     right: 28px;
     opacity: 0;
   }
+      
+    
+    
+  
   .menu-title {
     text-transform: uppercase;
     font-size: 1em;
@@ -351,8 +352,8 @@
   .menu .choice-3 .price-check,
   .menu .choice-4 .price-check {
     display: flex;
-    align-self: center;
-    transform: translateX(60px);
+    align-items: center;
+    transform: translateX(70px);
     
   }
   .menu .choice-1:hover .price-check,
@@ -382,12 +383,13 @@
   .menu .choice-2 .checkbox,
   .menu .choice-3 .checkbox,
   .menu .choice-4 .checkbox {
-    align-self: center;
+    display: flex;
+    align-items: center;
     padding: 25px;
     background-color: #99e2d0;
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
-    width: 10px;
+   
   }
   .menu .choice-1:hover .checkbox,
   .menu .choice-2:hover .checkbox,
