--- a/sass/layout/_body.scss
+++ b/sass/layout/_body.scss
@@ -7,7 +7,7 @@
   justify-content: center;
   text-align: center;
   display: flex;
-  margin-top: -5rem;
+  margin-top: -6rem;
   animation-delay: 3s;
   -webkit-animation: loader 3s forwards;
           animation: loader 3s forwards;
@@ -20,7 +20,7 @@
   text-align: center;
   height: 300px;
   width: 300px;
-  margin-top: 3rem;
+  margin-top: 4rem;
   border-top: 15px solid $color-primary ;
   border-right:15px solid $color-secondary;
   border-bottom: 15px solid $color-tertiary;
@@ -29,9 +29,6 @@
   -webkit-animation: loader_roll 3s forwards;
           animation: loader_roll 3s forwards;
 }
-
-
-
 #search {
   text-align: center;
   background-color:$backgroundcolor-main ;
@@ -49,8 +46,6 @@
           align-items: center;
   background: linear-gradient(180deg, lightgray 0%, #eaeaea 12%);
   padding: 16px 5px;
-  
-  
 }
  .location .fas{
   margin-left: -2em;
@@ -71,8 +66,6 @@
     font-weight:normal ;
     text-transform: initial;
     font-family: "roboto" ;
-    
-
   }
   .search-button {
     cursor: pointer;
@@ -84,35 +77,30 @@
     font-weight: bold;
     font-size: 0.8rem;
     margin: 20px 10px 40px 10px;
-    background: linear-gradient(180deg, #ff79da 10%, #9256dc 90%);
-    box-shadow: 3px 3px 10px #bfbfbf;
+    background: $background-gradient;
+    box-shadow: 3px 3px 10px $color-shadow ;
   }
   
   .search-button:hover {
     opacity: 0.90;
     transition: 0.3s;
-    box-shadow: 3px 3px 10px #0d0d0d ;
+    box-shadow: 3px 3px 10px $color-shadow--dark  ;
     transition: 0.3s;
   }
-  
-  
-  
-  
   #functionning h2 {
     margin: 40px 20px 15px 30px;
   
-    }
+  }
   
-    #functionning ul {
-      
-      list-style-type: none;
-      counter-reset: liste-couleur;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      opacity: 1;
-    }
-     #functionning ul li {
+  #functionning ul {
+    list-style-type: none;
+    counter-reset: liste-couleur;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    opacity: 1;
+  }
+  #functionning ul li {
       width: 90%;
       background-color: $backgroundcolor-main;
       box-shadow: 3px 3px 10px $color-shadow;
@@ -184,13 +172,14 @@
     font-size: 1.6em;
   }
   .heart-empty:hover {
-    animation:  0.25s  linear;
+    animation:  0.30s  linear;
     cursor: pointer;
   }
   .heart-empty:hover + i {
     opacity: 1;
     transform: scale(1);
-    transition:  0.25s linear;
+    transition:  0.30s linear;
+    cursor: pointer;
   }
   .heart-full {
     position: absolute;
@@ -200,9 +189,8 @@
     color: transparent;
     transform-origin: padding;
     transform: scale(0);
+    
   }
- 
-
   .restaurants .box-restaurant {
     position: relative;
     width: 90%;
@@ -223,7 +211,7 @@
     object-fit: cover;
   }
   .box-restaurant .new {
-    background-color: #99e2d0;
+    background-color: $color-tertiary;
     color: #2c9c81;
     width: max-content;
     position: absolute;
@@ -250,7 +238,7 @@
       margin-left: 8%;
     }
     .restaurant-name {
-      background: #ffffff;
+      background: $color-light;
       padding-top: 10px;
       border-top-left-radius: 40px;
       border-top-right-radius: 40px;
@@ -284,10 +272,6 @@
     right: 28px;
     opacity: 0;
   }
-      
-    
-    
-  
   .menu-title {
     text-transform: uppercase;
     font-size: 1em;
@@ -309,6 +293,7 @@
     flex-direction: column;
     align-items: center;
   }
+  
   .menu .choice-1,
   .menu .choice-2,
   .menu .choice-3,
@@ -347,64 +332,14 @@
     -webkit-animation: transition 0.8s ease-in 0.8s forwards;
     animation: transition 0.8s ease-in 0.8s both  ;
   }
-  .menu .choice-1 .price-check,
-  .menu .choice-2 .price-check,
-  .menu .choice-3 .price-check,
-  .menu .choice-4 .price-check {
-    display: flex;
-    align-items: center;
-    transform: translateX(70px);
-    
-  }
-  .menu .choice-1:hover .price-check,
-  .menu .choice-2:hover .price-check,
-  .menu .choice-3:hover .price-check,
-  .menu .choice-4:hover .price-check {
-    -webkit-animation: checkslide 0.45s ease-in-out forwards;
-    animation: checkslide 0.45s ease-in-out forwards;
-  }
-  .menu .choice-1 .checkicon,
-  .menu .choice-2 .checkicon,
-  .menu .choice-3 .checkicon,
-  .menu .choice-4 .checkicon {
-    display: inline-block;
-    color: #ffffff;
-    font-weight: bold;
-    font-size: 20px;
-  }
-  .menu .choice-1:hover .checkicon,
-  .menu .choice-2:hover .checkicon,
-  .menu .choice-3:hover .checkicon,
-  .menu .choice-4:hover .checkicon {
-    transform: rotate(1turn);
-    transition: 0.7s;
-  }
-  .menu .choice-1 .checkbox,
-  .menu .choice-2 .checkbox,
-  .menu .choice-3 .checkbox,
-  .menu .choice-4 .checkbox {
-    display: flex;
-    align-items: center;
-    padding: 25px;
-    background-color: #99e2d0;
-    border-top-right-radius: 15px;
-    border-bottom-right-radius: 15px;
-   
-  }
-  .menu .choice-1:hover .checkbox,
-  .menu .choice-2:hover .checkbox,
-  .menu .choice-3:hover .checkbox,
-  .menu .choice-4:hover .checkbox {
-    -webkit-animation: checkslide 0.45s ease-in-out forwards;
-    animation: checkslide 0.45s ease-in-out forwards;
-  }
- 
+  
   
   .menu .menu-content {
     margin-left: 10px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    font-family: "roboto",sans-serif;
   }
   .menu .menu-content h3,
   .menu .menu-content p {
@@ -416,26 +351,65 @@
     text-overflow: ellipsis;
     font-family: "roboto",sans-serif;
   }
-  .menu .price {
-    font-size: 0.85rem;
+  .price-check {
+    display: flex;
+    font-size: 1rem;
     font-weight: bold;
-    align-self: flex-end;
-    margin: 10px 20px;
+    align-items: flex-end;
+    margin-bottom: -5px;
+    
+  }
+   
+  .price{
+    margin:8px 20px;
+  }
+  
+  .checkbox {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 70px;
+    width: 70px;
+    background-color: $color-tertiary;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+    max-width: 0;
+    overflow: hidden;
+    transition: all 0.4s linear;
+  }
+  .checkicon {
+    color: #FFFFFF;
+    font-size: 25px;
+    margin-top: 5px;
+    transition: all 0.4s linear;
+  }
+  
+  .choice-1:hover .checkbox,
+  .choice-2:hover .checkbox,
+  .choice-3:hover .checkbox,
+  .choice-4:hover .checkbox{
+    max-width: 70px;
+  }
+  .choice-1:hover .checkicon,
+  .choice-2:hover .checkicon,
+  .choice-3:hover .checkicon,
+  .choice-4:hover .checkicon {
+    transform: rotate(1turn);
   }
   #button-commander {
     cursor: pointer;
-    opacity: 1;
-    border: none;
-    border-radius: 25px;
-    justify-content: center;
-    padding: 16px 50px;
-    color: $color-light;
-    font-weight: bold;
-    margin-left: 27%;
-    margin-top: 10%;
-    font-size: 1rem;
-    background: linear-gradient(180deg, #ff79da 10%, #9256dc 90%);
-    box-shadow: 3px 3px 10px $color-shadow;
+  opacity: 1;
+  border: none;
+  border-radius: 25px;
+  justify-content: center;
+  padding: 16px 50px;
+  color: #ffffff;
+  font-weight: bold;
+  margin-left: 27%;
+  margin-top: 10%;
+  font-size: 0.95rem;
+  background: $background-gradient;
+  box-shadow: 3px 3px 10px $color-shadow;
   }
   #button-commander:hover {
     opacity: 0.85;
