--- a/sass/layout/_responsive.scss
+++ b/sass/layout/_responsive.scss
@@ -47,13 +47,7 @@
   }
   
   
-    
-    
-    
-    
-
-
-    @media screen and (min-width: 1024px){
+     @media screen and (min-width: 1024px){
     
       header .logo-home {
         font-size: 4rem;
@@ -105,20 +99,25 @@
         width: 94%;
         
       }
+      
+      .price{
+        margin:7px 20px;
+      }
      
-     
-      #button-commander{
+      #button-commander {
         margin-left: 41%;
         margin-top: 3%;
       }
+     
      
       footer{
         font-size: 1.1rem;
       }
       
-     
-     
     }
+
+   
+
       
     @media screen and (min-width: 1440px) {
      
@@ -158,24 +157,22 @@
         margin: 30px;
       }
       
-      .menu .menu-content h3,
-      .menu .menu-content p {
-        font-size: 1em;
-      }
-      .menu .price {
-        font-size: 1em;
-      }
       
-      
-      #button-commander{
+      .price{
+        margin:5px 20px;
+      }
+      #button-commander {
         margin-left: 42.5%;
         font-size: 1.2em;
       }
+      
+      
       }
-  
       @media screen and (min-width: 2560px) {
         #button-commander{
           margin-left: 46%;
           
         }
         } 
+  
+     
