--- a/sass/layout/_header .scss
+++ b/sass/layout/_header .scss
@@ -17,7 +17,7 @@ header {
     font-size: 1.4rem;
     margin-top: 45px;
     margin-left: 35%;
-    color: #0d0d0d;
+    color: $color-shadow-dark;
   
   
   }
