--- a/sass/layout/_body.scss
+++ b/sass/layout/_body.scss
@@ -1,6 +1,6 @@
 .loading-spinner {
   position: fixed;
-  background-color:#f6f6f6 ;
+  background-color: $backgroundcolor-main;
   height: 100%;
   width: 100%;
   z-index: 1;
@@ -20,7 +20,7 @@
   text-align: center;
   height: 300px;
   width: 300px;
-  margin-top: 4rem;
+  margin-top: 6rem;
   border-top: 15px solid $color-primary ;
   border-right:15px solid $color-secondary;
   border-bottom: 15px solid $color-tertiary;
@@ -78,13 +78,13 @@
     font-size: 0.8rem;
     margin: 20px 10px 40px 10px;
     background: $background-gradient;
-    box-shadow: 3px 3px 10px $color-shadow ;
+    box-shadow: 4px 4px 10px $color-shadow ;
   }
   
   .search-button:hover {
-    opacity: 0.90;
+    opacity: 0.85;
     transition: 0.3s;
-    box-shadow: 3px 3px 10px $color-shadow--dark  ;
+    box-shadow: 4px 4px 10px $color-shadow-dark  ;
     transition: 0.3s;
   }
   #functionning h2 {
@@ -153,7 +153,7 @@
   .restaurants-cards p {
     font-size: 1em;
     margin: 5px 20px 0px 15px;
-    color:  #0d0d0d;
+    color:  $color-shadow-dark;
   }
   .heart-empty {
     position: absolute;
@@ -184,7 +184,7 @@
   .heart-full {
     position: absolute;
     opacity: 1;
-    background:linear-gradient(to top, #FF79DA, #9356DC);
+    background:$background-gradient;
     -webkit-background-clip: text;
     color: transparent;
     transform-origin: padding;
@@ -198,8 +198,8 @@
     margin: auto;
     margin-top: 25px;
     border-radius: 15px;
-    box-shadow: 3px 3px 10px #bfbfbf;
-    background-color: #ffffff;
+    box-shadow: 4px 4px 10px $color-shadow;
+    background-color: $color-light;
    
   }
   .restaurants .image-restaurant {
@@ -264,7 +264,7 @@
   .restaurant-name .heart-full {
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
-    background-image: linear-gradient( to top, #FF79DA, #9356DC);
+    background-image: $background-gradient;
     font-size: 1.6rem;
     display: block;
     position: absolute;
@@ -301,12 +301,12 @@
     width: 92%;
     height: 60px;
     cursor: pointer;
-    background: #ffffff;
+    background: $color-light;
     margin: 10px 12px;
     padding: 5px 0;
     border-radius: 15px;
     overflow: hidden;
-    box-shadow: 3px 3px 10px #bfbfbf;
+    box-shadow: 3px 3px 10px $color-shadow;
     display: flex;
     justify-content: space-between;
    }
@@ -378,7 +378,7 @@
     transition: all 0.4s linear;
   }
   .checkicon {
-    color: #FFFFFF;
+    color: $color-light;
     font-size: 25px;
     margin-top: 5px;
     transition: all 0.4s linear;
@@ -397,24 +397,23 @@
     transform: rotate(1turn);
   }
   #button-commander {
-    cursor: pointer;
+  display: block;
+  cursor: pointer;
   opacity: 1;
   border: none;
   border-radius: 25px;
-  justify-content: center;
+  margin: 50px auto 50px auto;
   padding: 16px 50px;
-  color: #ffffff;
+  color: $color-light;
   font-weight: bold;
-  margin-left: 27%;
-  margin-top: 10%;
-  font-size: 0.95rem;
+  font-size: 1rem;
   background: $background-gradient;
-  box-shadow: 3px 3px 10px $color-shadow;
+  box-shadow: 4px 4px 10px $color-shadow;
   }
   #button-commander:hover {
     opacity: 0.85;
     transition: 0.3s;
-    box-shadow: 3px 3px 10px #0d0d0d;
+    box-shadow: 4px 4px 10px $color-shadow-dark;
     transition: 0.3s;
   }
 
