--- a/sass/layout/_responsive.scss
+++ b/sass/layout/_responsive.scss
@@ -36,9 +36,7 @@
       margin-left: 3%;
     }
     
-    #button-commander{
-      margin-left: 37%;
-    }
+    
     footer {
       text-align: center;
     }
@@ -103,13 +101,9 @@
       .price{
         margin:7px 20px;
       }
-     
       #button-commander {
-        margin-left: 41%;
-        margin-top: 3%;
+        font-size: 1.1rem;
       }
-     
-     
       footer{
         font-size: 1.1rem;
       }
@@ -162,16 +156,15 @@
         margin:5px 20px;
       }
       #button-commander {
-        margin-left: 42.5%;
-        font-size: 1.2em;
+        margin-left: 43%;
+        
       }
       
       
       }
       @media screen and (min-width: 2560px) {
-        #button-commander{
+        #button-commander {
           margin-left: 46%;
-          
         }
         } 
   
