--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -3,8 +3,6 @@ $color-secondary: #ff79da;
 $color-tertiary:#99e2d0;
 
 $backgroundcolor-main: #f6f6f6;
-$backgroundcolor-dark: darken($backgroundcolor-main, 4.71);
-$backgroundcolor-darker: darken($backgroundcolor-main, 13.73);
 $backgroundcolor-footer: darken($backgroundcolor-main, 75.69);
 $background-gradient: linear-gradient(
 180deg,
@@ -13,5 +11,5 @@ $color-primary 90%
 );
 
 $color-shadow: #bfbfbf;
-$color-shadow--dark: #0d0d0d;
+$color-shadow-dark: #0d0d0d;
 $color-light: #ffffff;
