--- a/css/style.css
+++ b/css/style.css
@@ -261,32 +261,21 @@ a {
   position: absolute;
   bottom: 18px;
   right: 24px;
-  cursor: pointer;
   opacity: 0;
-  z-index: 1;
   font-size: 1.6em;
 }
 
-.heart-empty:hover {
-  animation: 0.3s linear;
-  cursor: pointer;
-}
-
-.heart-empty:hover + i {
-  opacity: 1;
-  transform: scale(1);
-  transition: 0.3s linear;
-  cursor: pointer;
-}
-
-.heart-full {
-  position: absolute;
-  opacity: 1;
+.heart .heart-full:hover {
   background: linear-gradient(180deg, #ff79da 10%, #9256dc 90%);
+  -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
-  color: transparent;
-  transform-origin: padding;
-  transform: scale(0);
+  opacity: 1;
+  z-index: 999;
+  cursor: pointer;
+}
+
+.heart .heart-empty:hover {
+  opacity: 0;
 }
 
 .restaurants .box-restaurant {
@@ -638,9 +627,9 @@ footer ul li .fas {
     -webkit-transform: scale(1.05);
     -ms-transform: scale(1.05);
     transform: scale(1.05);
-    -webkit-transition: 0.4s;
-    -o-transition: 0.4s;
-    transition: 0.4s;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
   }
 
   .restaurant-title {
