--- a/css/style.css
+++ b/css/style.css
@@ -265,17 +265,26 @@ a {
   font-size: 1.6em;
 }
 
-.heart .heart-full:hover {
-  background: linear-gradient(180deg, #ff79da 10%, #9256dc 90%);
-  -webkit-text-fill-color: transparent;
-  -webkit-background-clip: text;
-  opacity: 1;
-  z-index: 999;
+.heart-empty:hover {
+  animation: 0.2s forwards linear;
   cursor: pointer;
+  z-index: 1;
 }
 
-.heart .heart-empty:hover {
+.heart-empty:hover + i {
+  opacity: 1;
+  transform: scale(1);
+  transition: transform 0.2s linear;
+}
+
+.heart-full {
+  position: absolute;
   opacity: 0;
+  background: linear-gradient(180deg, #ff79da 10%, #9256dc 90%);
+  -webkit-background-clip: text;
+  color: transparent;
+  transform: scale(0);
+  transform-origin: center;
 }
 
 .restaurants .box-restaurant {
@@ -347,27 +356,15 @@ a {
   position: absolute;
   bottom: 7px;
   right: 28px;
-  font-size: 1.6rem;
+  font-size: 1.6em;
 }
 
 .restaurant-name .heart-full {
-  color: #777777;
+  color: linear-gradient(180deg, #ff79da 10%, #9256dc 90%);
   position: absolute;
   bottom: 7px;
   right: 28px;
-  font-size: 1.6rem;
-}
-
-.restaurant-name .heart-full {
-  -webkit-text-fill-color: transparent;
-  -webkit-background-clip: text;
-  background-image: linear-gradient(180deg, #ff79da 10%, #9256dc 90%);
-  font-size: 1.6rem;
-  display: block;
-  position: absolute;
-  bottom: 7px;
-  right: 28px;
-  opacity: 0;
+  font-size: 1.6em;
 }
 
 .menu-title {
