--- a/sass/layout/_body.scss
+++ b/sass/layout/_body.scss
@@ -259,7 +259,7 @@
     font-size: 1.6em;
   }
   .restaurant-name .heart-full {
-    color: $background-gradient;
+    background-color: $background-gradient;
     position: absolute;
     bottom: 7px;
     right: 28px;
