--- a/sass/utils/_animations.scss
+++ b/sass/utils/_animations.scss
@@ -46,6 +46,17 @@
   }
 }
 
+@keyframes empty {
+  0% {
+    opacity: 1;
+  }
+  99% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
 
 
   
