--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,17 @@
     transform: translateY(0px);
   }
 }
+@keyframes empty {
+  0% {
+    opacity: 1;
+  }
+  99% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
 * {
   margin: 0;
 }
@@ -266,7 +277,7 @@ a {
 }
 
 .heart-empty:hover {
-  animation: 0.3s forwards linear;
+  animation: empty 0.3s forwards linear;
   cursor: pointer;
   z-index: 1;
 }
